hphp/hack/test/ifc/check/multiple_sources.php.exp
=== IFC analysis results for multiple_sources.php
File "multiple_sources.php", line 42, characters 5-26:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "multiple_sources.php", line 8, characters 16-18:
  This may be the data source with policy `B`
  File "multiple_sources.php", line 6, characters 16-17:
  This may be the data sink with policy `A`
File "multiple_sources.php", line 18, characters 5-41:
Data with policy `B` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 8, characters 16-18:
  This may be the data source with policy `B`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
File "multiple_sources.php", line 18, characters 5-41:
Data with policy `A` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 6, characters 16-17:
  This may be the data source with policy `A`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
File "multiple_sources.php", line 27, characters 5-30:
Data with policy `B` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 8, characters 16-18:
  This may be the data source with policy `B`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "multiple_sources.php", line 26, characters 5-37:
  Another program point contributing to the illegal flow
File "multiple_sources.php", line 27, characters 5-30:
Data with policy `A` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 6, characters 16-17:
  This may be the data source with policy `A`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "multiple_sources.php", line 26, characters 5-37:
  Another program point contributing to the illegal flow
File "multiple_sources.php", line 32, characters 5-42:
Data with policy `B` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 8, characters 16-18:
  This may be the data source with policy `B`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
File "multiple_sources.php", line 32, characters 5-42:
Data with policy `A` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 6, characters 16-17:
  This may be the data source with policy `A`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "multiple_sources.php", line 31, characters 5-25:
  Another program point contributing to the illegal flow
File "multiple_sources.php", line 38, characters 5-42:
Data with policy `B` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 8, characters 16-18:
  This may be the data source with policy `B`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "multiple_sources.php", line 37, characters 5-26:
  Another program point contributing to the illegal flow
File "multiple_sources.php", line 38, characters 5-42:
Data with policy `A` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 6, characters 16-17:
  This may be the data source with policy `A`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "multiple_sources.php", line 36, characters 5-25:
  Another program point contributing to the illegal flow
File "multiple_sources.php", line 22, characters 5-42:
Data with policy `B` appears in context `PUBLIC`. (Typing[4379])
  File "multiple_sources.php", line 8, characters 16-18:
  This may be the data source with policy `B`
  File "multiple_sources.php", line 12, characters 16-22:
  This may be the data sink with policy `PUBLIC`
